--- a/index.html
+++ b/index.html
@@ -1602,7 +1602,8 @@
       <div class="sqs-layout sqs-grid-12 columns-12" data-type="page-section" id="page-section-61d5856788e215022ce5dea8"><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-6fe82282e0c99d100f0a"><div class="sqs-block-content">
 
 <div class="sqs-html-content">
-  <h2 style="text-align:center;white-space:pre-wrap;"><span class="sqsrte-text-color--accent">Secure your products at the right level</span></h2><h2 style="white-space:pre-wrap;"><span class="sqsrte-text-color--accent">component audits | infra analysis | code reviews </span></h2><ul data-rte-list="default" style="margin-left:240px;"><li><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p></li></ul>
+  <h2 style="text-align:center;white-space:pre-wrap;"><span class="sqsrte-text-color--accent">Securing products at the right level</span></h2>
+  <h3 style="text-align:center;white-space:pre-wrap;"><span class="sqsrte-text-color--accent">Component audits | Infra analysis | Code reviews </span></h3>
 </div>
 
 
