--- a/go-workshop-2.html
+++ b/go-workshop-2.html
@@ -1,4 +1,4 @@
-<!doctype html>
+L'attestation CSG/CRDS permet aux travailleurs indépendants de déterminer les montants des cotisations qui peuvent être déduits de leur revenu imposable. Ce revenu imposable est contenu dans leur déclaration fiscale.<!doctype html>
 <html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en-US"  >
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
