update content and CNAME

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <span id="logo">REKON</span>
+    <img src="logo.svg"></img>
     <nav>
       <ol>
         <li><a href="#security">Security</a></li>
@@ -26,7 +26,7 @@
       <p>Expertise to delivers simpler, test driven, reliable, scalable and modern platforms.</p>
     </section>
     <section id="security">
-      <h2>Security</h2>
+      <h2 class="left">Security</h2>
       <p>Securing products at the right level</p>
       <p>Component audits, infra and cloud analysis, code reviews</p>
       <div class="appraisals">
@@ -49,7 +49,7 @@
     </div>
     </section>
     <section id="training">
-      <h2>Workshops and training</h2>
+      <h2 class="right">Workshops and training</h2>
     </section>
     <section id="product">
       <h2>Product</h2>
